# Project_openGL_groep_18

./: .gitignore
opengl_framework/opengl_base/opengl_base/: CMakeLists.txt  FrameBuffer.h  Mesh.h  Model.cpp  Model.h  bezier.cpp  bezier.h  glad.c  main.cpp  toDO.md  vcpkg-configuration.json
opengl_framework/opengl_base/opengl_base/glsl shaders/: model.vs
opengl_framework/opengl_base/opengl_base/includes/glad/: glad.h
opengl_framework/opengl_base/opengl_base/resources/objects/cargo_ship/: scene.gltf
opengl_framework/opengl_base/opengl_base/resources/objects/rocks/: 3Drocks.mtl
opengl_framework/opengl_base/opengl_base/resources/objects/saturn/: scene.gltf
opengl_framework/opengl_base/opengl_base/shaders/: 7.4camera.fs  chromakeyshader.fs  convolution.fs  lightsource.fs  model.fs  model.vs  screen.fs  screen.vs  sun.fs
